<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prefs_about_text">Версия 1.0. Сборка от 17.10.2015</string>
    <string name="app_name">КНИТУ.events</string>
    <string name="events">События</string>
    <string name="event">Событие</string>
    <string name="notify">Оповещение</string>
    <string name="post">Статья</string>
    <string name="category_all">Общее</string>
    <string name="prefs_push_events_title">Новые события</string>
    <string name="prefs_push_posts_title">Свежие статьи</string>
    <string name="prefs_push_news_title">Новости</string>
    <string name="prefs_push_events_summary">Получать уведомления о новых событиях</string>
    <string name="prefs_push_posts_summary">Получать уведомления о новых статьях</string>
    <string name="prefs_push_news_summary">Получать свежие новости</string>
    <string name="prefs_about_description">КНИТУ.events для Android</string>
    <string name="prefs_information_report_to_team">Связаться с разработчиками</string>
    <string name="prefs_information_report_to_team_summary">android@ssaknitu.ru</string>
    <string name="settings">Настройки</string>
    <string name="organisations">Организации</string>
    <string name="save">Сохранить</string>
    <string name="prefs_push_orgs_customize_title">Организации</string>
    <string name="prefs_push_orgs_customize_summary">Настройка списка тех, на кого подписаться</string>
    <string name="no_connection">Нет интернет-подключения :(</string>
    <string name="posts">Статьи</string>
    <string name="news">Новости</string>
    <string name="error_load_post">Ошибка при загрузке статьи</string>
    <string name="error_load_event">Ошибка при загрузке события</string>
    <string name="prefs_app_push_sound_title">Звук уведомлений</string>
    <string name="prefs_app_push_sound_summary">Увдомления будут сопровождаться звуком</string>
    <string name="prefs_about_ssaknitu">ssaknitu.ru</string>
    <string name="prefs_about_ssaknitu_summary">Новости</string>
    <string name="prefs_about_events">events.ssaknitu.ru</string>
    <string name="prefs_about_events_summary">События</string>
    <string name="error_email_no_clients">Нет подходящих приложений для отправки сообщения. Пожалуйста, отправьте свое сообщение другим способом</string>
    <string name="send_email_over">Отправить сообщение через</string>
    <string name="support_email_subject">Events - обращение в службу поддержки</string>
    <string name="share">Поделиться</string>

</resources>
